<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Skubit IAB</string>
    <string name="iab_net">IAB Mainnet</string>

    <string name="action_settings">Settings</string>
    <string name="perm_billing">Allows the user to purchase items through Skubit.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Wallet -->
    <string name="transaction_status_pending">PENDING</string>
    <string name="transactiondetails_amountsent">Amount Sent</string>
    <string name="transactiondetails_notes">Notes</string>
    <string name="transactions_refresh_error">Could not sync transactions.</string>
    <string name="wallet_balance_label">BALANCE</string>
    <string name="wallet_balance_def">-.----</string>

    <!-- zxing -->
    <string name="barcode_scan_message">Place a Bitcoin barcode inside the\nviewfinder to scan it.
    </string>

    <!--Choose Activity-->
    <string name="choose_address">Select a Bitcoin address</string>

    <!--Permissions-->
    <string name="scope_login">Authenticate you</string>
    <string name="scope_money">Send and receive bitcoins. View balances.</string>
    <string name="scope_purchases">Make inapp purchases</string>


    <string name="select_keystore">Select Keystore</string>
    <string name="enter_password">Enter KeyStore Password</string>
    <string name="action_sigin_mobile">SignIn Mobile</string>
    <string name="action_signin_web">SignIn Web</string>
    <string name="action_licenses">Open Source Licenses</string>
    <string name="action_keys">Keys</string>
    <string name="action_money">Money</string>
    <string name="account_name">Name</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="send_btn">SEND</string>
    <string name="buy_btn">BUY</string>
    <string name="export_btn">EXPORT</string>
    <string name="signin_btn">SIGN IN</string>
    <string name="create_key_btn">CREATE NEW</string>
    <string name="send_money_amt">Enter Amount (BTC)</string>
    <string name="import_btn">IMPORT</string>
    <string name="save_btn">SAVE</string>
    <string name="contact_email">Contact Email</string>
    <string name="note">Note</string>
    <string name="back_btn">BACK</string>
    <string name="send_bitcoin_to">Send Bitcoin to ...</string>
    <string name="would_like">Would like to:</string>
    <string name="enter_amount">Enter Requested Amount (BTC)</string>
    <string name="send_money_complete">Send Money to Address to Complete Order</string>
    <string name="deposit_account">Deposit Bitcoin into Account</string>
    <string name="account_settings">Account Settings</string>
    <string name="fee">Fee</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="user_account_not_configured">User account has not yet been configured</string>
    <string name="money_sent">Money sent</string>
    <string name="enter_valid_amount">Enter a valid amount</string>
    <string name="copied_clipboard">"Copied to clipboard: "</string>
    <string name="already_purchased">Already Purchased</string>
    <string name="thank_for_order">Thank your for your purchase:\r\nOrderID=</string>
    <string name="product_not_found">Unable to find the product you requested</string>
    <string name="order">ORDER</string>
    <string name="available_balance">AVAILABLE FUNDS</string>
    <string name="login_register">Login/Register</string>
</resources>
