<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_money"
            android:orderInCategory="0"
            app:actionProviderClass="com.skubit.iab.MoneyActionProvider"
            app:showAsAction="always"
            android:title="@string/action_money"/>
    <item
            android:id="@+id/action_keys"
            android:orderInCategory="0"
            app:actionProviderClass="com.skubit.iab.KeysActionProvider"
            app:showAsAction="always"
            android:title="@string/action_keys"/>
    <item
            android:id="@+id/action_signin"
            android:orderInCategory="2"
            android:title="@string/action_sigin_mobile"/>
    <item
            android:id="@+id/action_signin_web"
            android:orderInCategory="3"
            android:title="@string/action_signin_web"/>
    <item
            android:id="@+id/action_notice"
            android:orderInCategory="4"
            android:title="@string/action_licenses">
    </item>
</menu>