<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:id="@+id/import_form_activity">

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:layout_weight="0"
            android:text="@string/select_keystore"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="200dp"
            android:paddingBottom="10dp"
            android:choiceMode="singleChoice"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0"
            android:background="#000000"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical"
            android:padding="10dp">

        <TextView
                android:id="@+id/keystoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/enter_password"
                android:paddingBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10">

            <requestFocus/>
        </EditText>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|right"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
        <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_btn"
                android:background="@color/secondary_button_color"/>

        <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/importBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/import_btn"
                android:background="@color/primary_button_color"/>
    </LinearLayout>

</LinearLayout>