<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:text="@string/choose_address"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:minHeight="200dp"
            android:choiceMode="singleChoice"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0"
            android:background="#000000"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|right"
            android:orientation="horizontal">

        <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/createAddressBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="@string/create_key_btn"
                android:textSize="@dimen/text_small"
                android:background="@color/primary_button_color"/>

        <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_btn"
                android:textSize="@dimen/text_small"
                android:background="@color/primary_button_color"/>
    </LinearLayout>
    <!--                android:textColor="#FFFFFF"-->
</LinearLayout>