<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/fragment_signin"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/site"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/would_like"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"/>
        <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice"/>

    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|right"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

        <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/noBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_btn"
                android:background="@color/secondary_button_color"/>
        <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/yesBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_btn"
                android:background="@color/primary_button_color"/>
    </LinearLayout>
</LinearLayout>
